<resources>
    <string name="app_name">CurrentLocation</string>
    <string name="on_water">onWater</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="location_stub">Location goes here</string>
    <string name="location_longitude_label">Longitude:</string>
    <string name="location_latitude_label">Latitude:</string>
    <string name="location_city_label">City:</string>

    <string name="error_message_location">Location services is disabled</string>
    <string name="alert_message_gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="dialog_btn_positive">Yes</string>
    <string name="dialog_btn_negative">No</string>
    <string name="set">Set</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="progress_hint">Enter ml.</string>
    <string name="current_value">%</string>
    <string name="current">%1$s ml.</string>
</resources>
